--- a/package.json
+++ b/package.json
@@ -10,8 +10,26 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.73.6"
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^7.6.4",
+    "@react-native-community/geolocation": "^3.2.1",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
+    "react": "^18.2.0",
+    "react-native": "^0.73.6",
+    "react-native-document-picker": "^9.1.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.13.0",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-onesignal": "^5.1.0",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-svg-charts": "^5.4.0",
+    "react-native-ui-datepicker": "^2.0.2",
+    "react-native-vector-icons": "^10.0.3",
+    "toastify-react-native": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
