--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-native": "^0.73.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-document-picker": "^9.1.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.13.0",
@@ -26,6 +27,7 @@
     "react-native-onesignal": "^5.1.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-svg": "^15.1.0",
     "react-native-svg-charts": "^5.4.0",
     "react-native-ui-datepicker": "^2.0.2",
     "react-native-vector-icons": "^10.0.3",
