--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-maps": "^1.13.0",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-onesignal": "^5.1.0",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^15.1.0",
