--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^7.6.4",
     "@react-native-community/geolocation": "^3.2.1",
+    "@react-native-firebase/app": "^19.2.2",
+    "@react-native-firebase/database": "^19.2.2",
+    "@react-native-firebase/messaging": "^19.2.2",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
+    "firebase": "^10.11.0",
     "react": "^18.2.0",
     "react-native": "^0.73.6",
-    "react-native-chart-kit": "^6.12.0",
     "react-native-document-picker": "^9.1.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.13.0",
@@ -28,8 +31,6 @@
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
-    "react-native-svg": "^15.1.0",
-    "react-native-svg-charts": "^5.4.0",
     "react-native-ui-datepicker": "^2.0.2",
     "react-native-vector-icons": "^10.0.3",
     "toastify-react-native": "^5.0.0"
@@ -48,6 +49,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
