--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ FIREBASE_PROJECT_ID=adminchat-96c44
 FIREBASE_STORAGE_BUCKET=adminchat-96c44.appspot.com
 FIREBASE_MESSAGING_SENDER_ID=804911630526
 FIREBASE_APP_ID=1:804911630526:android:a27a3afee91e7cf79c76ef
+SERVER_KEY=AAAAu2h4yL4:APA91bFDIaAg_mBqyjQTh0TqljyjS942P-xkv0XC11CkcoZloebj0Q5fZz52r-b5yC64sPMrfosNkQ13QL0c9SE_tC1zV_rMRHXKfXMf04eZVl8yRWaCgw6O2VC7LnLLISk_3nQs0wnX
+
