--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,5 +25,12 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+
+        <meta-data
+          android:name="com.google.android.geo.API_KEY"
+          android:value="AIzaSyB1WjOaZdzMLxijAYEcAzFwmGNp8qaFM7c"/>
+       <!-- <meta-data
+          android:name="com.google.android.maps.v2.API_KEY"
+          android:value="AIzaSyB1WjOaZdzMLxijAYEcAzFwmGNp8qaFM7c"/> -->
     </application>
 </manifest>
