--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+
+        <meta-data
+          android:name="com.google.android.geo.API_KEY"
+          android:value="AIzaSyB1WjOaZdzMLxijAYEcAzFwmGNp8qaFM7c"
+        />
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -26,9 +32,6 @@
         </intent-filter>
       </activity>
 
-        <meta-data
-          android:name="com.google.android.geo.API_KEY"
-          android:value="AIzaSyB1WjOaZdzMLxijAYEcAzFwmGNp8qaFM7c"/>
        <!-- <meta-data
           android:name="com.google.android.maps.v2.API_KEY"
           android:value="AIzaSyB1WjOaZdzMLxijAYEcAzFwmGNp8qaFM7c"/> -->
